--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         .tiktok-frame {
             aspect-ratio: 9/16;
             min-width: 280px;
+                max-height: 600px; /* Add this line */
+
         }
     </style>
 </head>
