--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             aspect-ratio: 9/16;
             min-width: 280px;
                 max-height: 600px; /* Add this line */
+            width: 90vw;
 
         }
     </style>
