--- a/index.html
+++ b/index.html
@@ -43,8 +43,16 @@
             aspect-ratio: 9/16;
             min-width: 280px;
                 max-height: 600px; /* Add this line */
+          
+
+        }
+        @media(max-width:800px) {
+
+ .tiktok-frame {
+           
             width: 90vw;
 
+        }
         }
     </style>
 </head>
