--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         </div>
 
                         <div class="flex gap-4 mt-8">
-                            <a href="https://www.facebook.com/p/Full-proof-Detailing-61569693412226/" class="w-12 h-12 bg-[#222] rounded flex items-center justify-center hover:bg-brand hover:text-black transition"><i class="fa-brands fa-facebook-f text-xl"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=61576373983866" class="w-12 h-12 bg-[#222] rounded flex items-center justify-center hover:bg-brand hover:text-black transition"><i class="fa-brands fa-facebook-f text-xl"></i></a>
                             <a href="https://www.instagram.com/fullproof_detailing/" class="w-12 h-12 bg-[#222] rounded flex items-center justify-center hover:bg-brand hover:text-black transition"><i class="fa-brands fa-instagram text-xl"></i></a>
                             <a href="https://www.tiktok.com/discover/full-proof-detailing" class="w-12 h-12 bg-[#222] rounded flex items-center justify-center hover:bg-brand hover:text-black transition"><i class="fa-brands fa-tiktok text-xl"></i></a>
                         </div>
