--- a/services/index.html
+++ b/services/index.html
@@ -54,6 +54,8 @@
                         <a href="#" class="text-brand border-b-2 border-brand px-3 py-2 font-bold">Services</a>
                         <a href="{{ site.baseurl }}/#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
                         <a href="{{ site.baseurl }}/#reviews" class="hover:text-brand transition px-3 py-2 font-bold">Reviews</a>
+                                                  <a href="{{ site.baseurl }}/contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
+
                     </div>
                 </div>
                 <div>
