--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
                         <a href="#home" class="hover:text-brand transition px-3 py-2 font-bold">Home</a>
-                        <a href="/services" class="hover:text-brand transition px-3 py-2 font-bold">Services</a>
+                        <a href="services" class="hover:text-brand transition px-3 py-2 font-bold">Services</a>
                         <a href="#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
                         <a href="#reviews" class="hover:text-brand transition px-3 py-2 font-bold">Reviews</a>
                           <a href="{{ site.baseurl }}/contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
