--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a href="services" class="hover:text-brand transition px-3 py-2 font-bold">Services</a>
                         <a href="#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
                         <a href="#reviews" class="hover:text-brand transition px-3 py-2 font-bold">Reviews</a>
-                          <a href="{{ site.baseurl }}/contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
+                          <a href="contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
                     </div>
                 </div>
                 <div>
