--- a/services/index.html
+++ b/services/index.html
@@ -45,16 +45,16 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex-shrink-0 flex items-center gap-3">
-                    <img src="Logo.png" alt="Full Proof Detailing Logo" class="h-14 w-14 rounded-full border-2 border-brand">
-                    <a href="" class="font-bold text-xl tracking-tighter hidden sm:block">FULL PROOF <span class="text-brand">DETAILING</span></a>
+                    <img src="https://jamesbrownr.github.io/Full-Proof-Detailing/Logo.png" alt="Full Proof Detailing Logo" class="h-14 w-14 rounded-full border-2 border-brand">
+                    <a href="https://jamesbrownr.github.io/Full-Proof-Detailing" class="font-bold text-xl tracking-tighter hidden sm:block">FULL PROOF <span class="text-brand">DETAILING</span></a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
-                        <a href="" class="hover:text-brand transition px-3 py-2 font-bold">Home</a>
-                        <a href="#" class="text-brand border-b-2 border-brand px-3 py-2 font-bold">Services</a>
-                        <a href="/#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
-                        <a href="/#reviews" class="hover:text-brand transition px-3 py-2 font-bold">Reviews</a>
-                                                  <a href="/contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing/" class="hover:text-brand transition px-3 py-2 font-bold">Home</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing/services" class="text-brand border-b-2 border-brand px-3 py-2 font-bold">Services</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing#reviews" class="hover:text-brand transition px-3 py-2 font-bold">Reviews</a>
+                                                  <a href="https://jamesbrownr.github.io/Full-Proof-Detailing/contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
 
                     </div>
                 </div>
