--- a/contact/index.html
+++ b/contact/index.html
@@ -48,20 +48,22 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <div class="flex-shrink-0 flex items-center gap-3">
-                    <img src="../Logo.png" alt="Full Proof Detailing Logo" class="h-14 w-14 rounded-full border-2 border-brand">
-                    <a href="../index.html" class="font-bold text-xl tracking-tighter hidden sm:block">FULL PROOF <span class="text-brand">DETAILING</span></a>
+                    <img src="https://jamesbrownr.github.io/Full-Proof-Detailing/Logo.png" alt="Full Proof Detailing Logo" class="h-14 w-14 rounded-full border-2 border-brand">
+                    <a href="https://jamesbrownr.github.io/Full-Proof-Detailing" class="font-bold text-xl tracking-tighter hidden sm:block">FULL PROOF <span class="text-brand">DETAILING</span></a>
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-8">
-                        <a href="../index.html" class="hover:text-brand transition px-3 py-2 font-bold">Home</a>
-                        <a href="../services/index.html" class="hover:text-brand transition px-3 py-2 font-bold">Services</a>
-                        <a href="../index.html#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
-                        <a href="#" class="text-brand border-b-2 border-brand px-3 py-2 font-bold">Contact</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing/" class="hover:text-brand transition px-3 py-2 font-bold">Home</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing/services" class="text-brand border-b-2 border-brand px-3 py-2 font-bold">Services</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing#gallery" class="hover:text-brand transition px-3 py-2 font-bold">Work</a>
+                        <a href="https://jamesbrownr.github.io/Full-Proof-Detailing#reviews" class="hover:text-brand transition px-3 py-2 font-bold">Reviews</a>
+                                                  <a href="https://jamesbrownr.github.io/Full-Proof-Detailing/contact" class="hover:text-brand transition px-3 py-2 font-bold">Contact</a>
+
                     </div>
                 </div>
                 <div>
                     <a href="sms:13522989075" class="bg-brand text-black font-black px-6 py-2 rounded-full hover:bg-white transition transform hover:scale-105">
-                        <i class="fa-solid fa-comment-sms mr-2"></i> TEXT US
+                        <i class="fa-solid fa-comment-sms mr-2"></i> GET QUOTE
                     </a>
                 </div>
             </div>
